--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/portfolio" | relative_url }}">Portfolio</a>
+          <a class="nav-link" href="{{"/portfolio" | relative_url }}">Portfolio/Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
