Adding source link to footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -78,7 +78,8 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }} | <a href="https://github.com/theothermattm/theothermattm.github.io">Source</a></p>
+        <p class="copyright text-muted"></p>
       </div>
     </div>
   </div>
