Changes to default metadata and categories.  Adding category page.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,3 +12,13 @@
     padding: 50px 0;
   }
 }
+
+.category-list {
+  padding-bottom: 50px;
+  li {
+    display: inline-flex;
+    padding: 0 50px 10px 0;
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
+}
