--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
           {% endif %}
           {% if site.mastodon_url %}
           <li class="list-inline-item">
-            <a href="{{ site.mastodon_url }}">
+            <a href="{{ site.mastodon_url }}" title="Mastodon">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="far fa-grin-beam fa-stack-1x fa-inverse"></i>
@@ -39,7 +39,7 @@
           {% endif %}
           {% if site.facebook_username %}
           <li class="list-inline-item">
-            <a href="https://www.facebook.com/{{ site.facebook_username }}">
+            <a href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -49,7 +49,7 @@
           {% endif %}
           {% if site.linkedin_username %}
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
+            <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -59,7 +59,7 @@
           {% endif %}
           {% if site.github_username %}
           <li class="list-inline-item">
-            <a href="https://github.com/{{ site.github_username }}">
+            <a href="https://github.com/{{ site.github_username }}" title="Github">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -69,7 +69,7 @@
           {% endif %}
           {% if site.instagram_username %}
           <li class="list-inline-item">
-            <a href="https://instagram.com/{{ site.instagram_username }}">
+            <a href="https://instagram.com/{{ site.instagram_username }}" title="Instagram">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
@@ -78,7 +78,7 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }} | <a href="https://github.com/theothermattm/theothermattm.github.io">Source</a></p>
+        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }} &middot; <a href="https://github.com/theothermattm/theothermattm.github.io">Source</a> &middot; <a href="/feed.xml"><i title="RSS feed" class="fas fa-rss"></i></a></p>
         <p class="copyright text-muted"></p>
       </div>
     </div>
